# prj_stm8

./: .gitignore  stm8.code-workspace
stm8s105_fw/: CMakeLists.txt
stm8s105_fw/src/: main.c
stm8s105_fw/src/ap/: ap.c
stm8s105_fw/src/bsp/: bsp.c  bsp.h
stm8s105_fw/src/hw/: hw.c  hw.h  hw_def.h
stm8s105_fw/src/hw/driver/: cli.c  led.c  uart.c
stm8s105_fw/tools/: toolchain.cmake
